Fix Overflow

--- a/css/styles.css
+++ b/css/styles.css
@@ -9,12 +9,13 @@
 body {
     font-family: "Prompt", sans-serif;
     background-color: #0F1624;
+    position: relative;
    
 }
-
+/* 
 html {
     scroll-behavior: smooth;
-}
+} */
 
 header {
     height: 100vh;
